Fix alignment

--- a/src/components/alert/alert.scss
+++ b/src/components/alert/alert.scss
@@ -69,6 +69,7 @@
 .sl-alert__close {
   flex: 0 0 auto;
   display: flex;
+  align-items: center;
   background: none;
   border: none;
   border-radius: var(--sl-border-radius-small);
